<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soccer Scoreboard Lite</string>
    <string name="action_settings">Settings</string>
    <string name="undo">-1</string>
    <string name="team_A">Home</string>
    <string name="team_B">Visitors</string>
    <string name="team_name_hint">Type a Team Name</string>
    <string name="pick_color">Pick a Color</string>
    <string name="long_press_reset">LONG PRESS to Reset Scores</string>
    <string name="reset_score">Reset Scores</string>
    <string name="long_press_undo">LONG PRESS to Undo One score</string>
    <string name="long_press_reset_all">LONG PRESS AGAIN to Reset\nTeams Name and Color</string>
    <string name="help_config">PRESS to\nSet team Name and Color.</string>
    <string name="help_config.7">PRESS to\nSet team Name and Color.</string>
    <string name="help_config.10">PRESS to Set team Name and Color.</string>
    <string name="help_undo">LONG PRESS to\nUndo One score.</string>
    <string name="help_undo.7">LONG PRESS to Undo One score.</string>
    <string name="help_undo.10">LONG PRESS to Undo One score.</string>
    <string name="help_reset">LONG PRESS to Reset Scores\nIf Score is 0:0, then it will\nReset Team Name and Color.</string>
    <string name="help_reset.7">LONG PRESS to Reset Scores.  If Score is 0:0,\nthen it will Reset Team Name and Color.</string>
    <string name="help_reset.10">LONG PRESS to Reset Scores.  If Score is 0:0,\nthen it will Reset Team Name and Color.</string>
    <string name="help_swap">PRESS to switch team sides.</string>
    <string name="obs">* This is the Free Version.\n\n- Some features are only available on the Paid Version.\n\n- For any comment or suggestion, please contact us at\nwaisblutmobileapp@gmail.com\n\n- If you like this Application, please support Development by installing the US$0.99 Version ;)</string>
    <string name="full_version"><![CDATA[<a href="https://play.google.com/store/apps/developer?id=Waisblut+Apps">PRESS HERE FOR THE FULL VERSION</a><p>(Yet to be released!)</p>]]></string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time : </string>
    <string name="min_sec">min : sec</string>
    <string name="set_as_default">Set as Default</string>
    <string name="long_press_setTime">LONG PRESS to edit time.</string>
    <string name="long_press_editName">LONG PRESS to Edit Team Name.</string>
    <string name="reset_all">Reset All</string>
    <string name="long_press_pause">LONG PRESS to PAUSE the timer.</string>
    <string name="long_press_play" >LONG PRESS to PLAY the timer.</string>
    <string name="long_press_stop">LONG PRESS to reset the timer.</string>


</resources>
