<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ColorButton.Blue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/TextTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_sec" />

        <com.waisblut.soccerscoreboardlite.views.MyTimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_buttom"
            android:padding="3dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/lin1"
        android:layout_toRightOf="@id/lin1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="3dp">

        <Button
            android:id="@+id/btnSetTime"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_set"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>